# rust-practise

file_manager/: Cargo.toml
file_manager/src/: main.rs
file_manager/src/storage/: mod.rs
